# degradado

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
src/degradado.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/degradado_jotalea/: __init__.py  ansirgb.py  core.py
