[project]
name = "degradado"
version = "0.1.0"
authors = [
    { name="Jotalea", email="main@jotalea.com.ar" },
]
description = "Utility to create pretty gradients in your terminal"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jotalea/degradado"
Issues = "https://github.com/jotalea/degradado/issues"
